<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purplechelou"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/text1"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@+id/text1"
        android:layout_marginHorizontal="10dp"
        android:onClick="onClick1"
        android:layout_centerHorizontal="true"
        android:text="@string/bouton1" />

    <Button
        android:id="@+id/button3"
        android:layout_marginTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@+id/Image0"
        android:onClick="onClick2"
        android:layout_marginHorizontal="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/bouton3" />

        <ImageView
            android:id="@+id/Image0"
            android:layout_marginTop="20sp"
            android:layout_width="wrap_content"
            android:layout_height="250sp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/pfc"
            android:layout_below="@+id/button0"
            />

        <ImageView
            android:id="@+id/Image1"
            android:layout_width="wrap_content"
            android:layout_height="150sp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/morpion"
            android:layout_below="@+id/button3"
            />



</RelativeLayout>
